# funwithloggers

./: CMakeLists.txt
.devcontainer/: Dockerfile
src/: Foo.cpp  Foo.hpp  Future.hpp  LogStream.cpp  LogStream.hpp  Logger.hpp  Result.hpp
test/: main.cpp
